--- a/voltha-adapter-simulated/templates/onu.yml
+++ b/voltha-adapter-simulated/templates/onu.yml
@@ -17,7 +17,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: onu
-  namespace: {{ .Values.global.namespace }}
   labels:
     name: onu
 spec:
@@ -33,7 +32,6 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: onu
-  namespace: {{ .Values.global.namespace }}
 spec:
    replicas: {{ .Values.replicas.onu }}
    template:
@@ -43,7 +41,6 @@ spec:
        annotations:
          cni: "calico,pon0"
      spec:
-       namespace: {{ .Values.global.namespace }}
        containers:
          - name: onu
            image: {{ .Values.global.registry }}{{ .Values.images.ponsim.repository }}:{{ tpl .Values.images.ponsim.tag . }}
@@ -54,9 +51,7 @@ spec:
                  fieldRef:
                    fieldPath: status.podIP
              - name: NAMESPACE
-               valueFrom:
-                 fieldRef:
-                   fieldPath: metadata.namespace
+               value: {{ quote .Release.Namespace }}
 
            args:
              - "/app/ponsim"
