--- a/voltha-etcd-cluster/Chart.yaml
+++ b/voltha-etcd-cluster/Chart.yaml
@@ -15,5 +15,5 @@
 apiVersion: v1
 appVersion: "0.9.2"
 description: Create an etcd-cluster using etcd-operator provided CRD
-name: etcd-cluster
-version: 0.1.2
+name: voltha-etcd-cluster
+version: 2.0.0 
