--- a/voltha/templates/10-rbac.yml
+++ b/voltha/templates/10-rbac.yml
@@ -17,7 +17,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: voltha-serviceaccount
-  namespace: {{ .Values.global.namespace }}
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -34,7 +33,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: voltha-role
-  namespace: {{ .Values.global.namespace }}
+  namespace: {{ .Release.Namespace }}
 rules:
   - apiGroups: [""]
     resources: ["pods", "secrets", "namespaces", "endpoints"]
@@ -48,7 +47,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: voltha-role-nisa-binding
-  namespace: {{ .Values.global.namespace }}
+  namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -56,7 +55,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: voltha-serviceaccount
-    namespace: {{ .Values.global.namespace }}
+    namespace: {{ .Release.Namespace }}
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -70,4 +69,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: voltha-serviceaccount
-    namespace: {{ .Values.global.namespace }}
+    namespace: {{ .Release.Namespace }}
