--- a/voltha/templates/affinity-router.yml
+++ b/voltha/templates/affinity-router.yml
@@ -17,11 +17,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: voltha-api
-  namespace: {{ .Values.global.namespace }}
-  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
+  serviceAccountName: {{ .Values.serviceaccount }}
 spec:
-  namespace: {{ .Values.global.namespace }}
-  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
+  serviceAccountName: {{ .Values.serviceaccount }}
   ports:
     - name: grpc
       port: 55555
@@ -34,8 +32,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: voltha-api-server
-  namespace: {{ .Values.global.namespace }}
-  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
+  serviceAccountName: {{ .Values.serviceaccount }}
 spec:
   replicas: {{ .Values.replicas.afrouter }}
   template:
@@ -45,21 +42,26 @@ spec:
       annotations:
         cni: "calico"
     spec:
-      namespace: {{ .Values.global.namespace }}
-      serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
+      serviceAccountName: {{ .Values.serviceaccount }}
       containers:
       - name: arouter
-        image: {{ .Values.global.registry }}{{ .Values.images.afrouter.repository }}:{{ tpl .Values.images.afrouter.tag . }}
+        image: {{ .Values.registry }}{{ .Values.images.afrouter.repository }}:{{ tpl .Values.images.afrouter.tag . }}
         imagePullPolicy: {{ .Values.images.afrouter.pullPolicy }}
         volumeMounts:
         - name: config-volume
           mountPath: /app/config
         ports:
         - containerPort: 55555
+        env:
+        - name: POD_NAMESPACE
+          value: {{ .Release.Namespace }}
         command: ["/app/afrouter"]
         args: ["-config", "/app/config/arouter.voltha.json"]
       - name: arouterd
-        image: {{ .Values.global.registry }}{{ .Values.images.afrouterd.repository }}:{{ tpl .Values.images.afrouterd.tag . }}
+        env:
+        - name: POD_NAMESPACE
+          value: {{ .Release.Namespace }}
+        image: {{ .Values.registry }}{{ .Values.images.afrouterd.repository }}:{{ tpl .Values.images.afrouterd.tag . }}
         imagePullPolicy: {{ .Values.images.afrouterd.pullPolicy }}
         command: ["/app/arouterd"]
       restartPolicy: Always
