--- a/voltha/templates/afrouter-config.yml
+++ b/voltha/templates/afrouter-config.yml
@@ -198,5 +198,4 @@ data:
 kind: ConfigMap
 metadata:
   name: afrouter-config
-  namespace: {{ .Values.global.namespace }}
-  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
+  serviceAccountName: {{ .Values.serviceaccount }}
