--- a/voltha/values.yaml
+++ b/voltha/values.yaml
@@ -13,23 +13,36 @@
 # limitations under the License.
 
 ---
-# Globally define a namespace and registry
-global:
-  namespace: voltha
-  registry: ''
+registry: ''
+serviceaccount: voltha-serviceaccount
+private_etcd_cluster: true
+private_kafka_cluster: true
 
 # Define connectivity to Kafka
 kafka:
+  configurationOverrides:
+    "offsets.topic.replication.factor": 1
+    "log.retention.hours": 4
+    "log.message.timestamp.type": "LogAppendTime"
+  persistence:
+    enabled: false
+  zookeeper:
+    replicaCount: 1
+    persistence:
+      enabled: false
+  replicas: 3
+
+message:
   adapter:
-    service: cord-kafka.default.svc.cluster.local
+    service: voltha-kafka.voltha.svc.cluster.local
     port: 9092
   cluster:
-    service: cord-kafka.default.svc.cluster.local
+    service: voltha-kafka.voltha.svc.cluster.local
     port: 9092
 
 # Define connectivity to etcd
 etcd:
-  service: etcd-cluster-client.default.svc.cluster.local
+  service: voltha-etcd-cluster-client.voltha.svc.cluster.local
   port: 2379
 
 # Define controller to which to connect
