--- a/voltha-etcd-cluster/templates/etcd-cluster.yaml
+++ b/voltha-etcd-cluster/templates/etcd-cluster.yaml
@@ -25,6 +25,6 @@ spec:
     etcdEnv:
     - name: ETCD_AUTO_COMPACTION_RETENTION
       value: {{ quote .Values.autoCompactionRetention }}
-    busyboxImage: {{ .Values.global.registry }}{{ .Values.images.busybox.repository }}:{{ tpl .Values.images.busybox.tag . }}
+    busyboxImage: {{ .Values.registry }}{{ .Values.images.busybox.repository }}:{{ tpl .Values.images.busybox.tag . }}
   version: {{ tpl .Values.images.etcd.tag . }}
-  repository: {{ .Values.global.registry }}{{ .Values.images.etcd.repository }}
+  repository: {{ .Values..registry }}{{ .Values.images.etcd.repository }}
