--- a/voltha/values.yaml
+++ b/voltha/values.yaml
@@ -18,7 +18,7 @@ serviceaccount: voltha-serviceaccount
 private_etcd_cluster: true
 private_kafka_cluster: true
 
-# Define connectivity to Kafka
+# Configure the Kafka sub-chart (if it is used)
 kafka:
   configurationOverrides:
     "offsets.topic.replication.factor": 1
@@ -32,23 +32,25 @@ kafka:
       enabled: false
   replicas: 3
 
-message:
-  adapter:
-    service: voltha-kafka.voltha.svc.cluster.local
-    port: 9092
-  cluster:
-    service: voltha-kafka.voltha.svc.cluster.local
-    port: 9092
-
-# Define connectivity to etcd
-etcd:
-  service: voltha-etcd-cluster-client.voltha.svc.cluster.local
-  port: 2379
-
-# Define controller to which to connect
-controller:
-  service: onos-openflow.default.svc.cluster.local
-  port: 6653
+# Define connectivity to services on which VOLTHA depends
+services:
+  kafka:
+    adapter:
+      service: voltha-kafka.voltha.svc.cluster.local
+      port: 9092
+    cluster:
+      service: voltha-kafka.voltha.svc.cluster.local
+      port: 9092
+  
+  # Define connectivity to etcd
+  etcd:
+    service: voltha-etcd-cluster-client.voltha.svc.cluster.local
+    port: 2379
+  
+  # Define controller to which to connect
+  controller:
+    service: onos-openflow.default.svc.cluster.local
+    port: 6653
 
 # Define the recplica count for everything
 replicas:
