--- a/voltha-etcd-cluster/templates/etcd-cluster.yaml
+++ b/voltha-etcd-cluster/templates/etcd-cluster.yaml
@@ -27,4 +27,4 @@ spec:
       value: {{ quote .Values.autoCompactionRetention }}
     busyboxImage: {{ .Values.registry }}{{ .Values.images.busybox.repository }}:{{ tpl .Values.images.busybox.tag . }}
   version: {{ tpl .Values.images.etcd.tag . }}
-  repository: {{ .Values..registry }}{{ .Values.images.etcd.repository }}
+  repository: {{ .Values.registry }}{{ .Values.images.etcd.repository }}
